// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="cbu8okn soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c-c7kcmq soui-radio-group"
>
  <div
    class="c7ok09u soui-radio-wrapper cgmhgbp soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="c7ok09u soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="ch6vfkl soui-radio-indicator-wrapper"
    >
      <span
        class="c-g5gjj6 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c1w8wma soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="c481088 soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c-7q823k soui-slider-track"
    >
      <div
        class="c-u69f6y soui-slider-track-inner"
        dir="ltr"
        style="left: 0%; right: 92%;"
      >
        <div
          class="c-1we5p8 soui-slider-indicator ceadt3r soui-slider-indicator-end"
          dir="ltr"
        />
        <div
          class="c-jepcrj soui-slider-end-value c-7pf33u soui-slider-value"
          dir="ltr"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="cbu8okn soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c-9gkh8h soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cmi4mna soui-button-primary c-hb33si soui-button-button"
      dir="ltr"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
